--- a/src/index.css
+++ b/src/index.css
@@ -4,18 +4,18 @@
 }
 
 .form-control:focus {
-  border-color: green;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px green;
+  border-color: #005734;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #005734;
 }
 
 .accordion-button:not(.collapsed) {
   color: #ffffff;
-  background-color: green;
-  box-shadow: inset 0 -1px 0 green;
+  background-color: #005734;
+  box-shadow: inset 0 -1px 0 #005734;
 }
 
 .form-check-input:checked {
-  background-color: green !important;
+  background-color: #005734 !important;
   border: 0;
 }
 .form-check-input:focus,
@@ -26,18 +26,18 @@ label.form-check-label:focus,
   color: black;
   outline: 0;
   border: 0;
-  box-shadow: 0 0 0 0.1rem green !important;
+  box-shadow: 0 0 0 0.1rem #005734 !important;
 }
 
 h1 {
   font-weight: bold;
   font-size: 2rem;
-  color: green;
+  color: #005734;
   font-size: 2.5rem;
 }
 
 h2 {
-  color: green;
+  color: #005734;
 }
 
 img {
@@ -53,7 +53,7 @@ img {
 }
 
 .green-spinner {
-  color: green;
+  color: #005734;
 }
 
 @media only screen and (max-width: 600px) {
